kubernetes/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        hostPath:
          path: /var/lib/k8s/jellyseerr
